[package]
name = "bdt"
version = "0.1.3"
homepage = "https://github.com/andygrove/bdt"
repository = "https://github.com/andygrove/bdt"
authors = ["Andy Grove <andygrove73@gmail.com>"]
description = "Simple utilities for viewing and converting various data file formats"
license = "Apache-2.0"
keywords = ["view", "convert", "parquet", "json", "avro", "csv"]
edition = "2021"

[dependencies]
datafusion = { version = "8.0", features = ["avro-rs"] }
structopt = "0.3"
tokio = "1.19"