[package]
name = "bdt"
version = "0.5.0"
homepage = "https://github.com/andygrove/bdt"
repository = "https://github.com/andygrove/bdt"
authors = ["Andy Grove <andygrove73@gmail.com>"]
description = "Simple utilities for viewing and converting various data file formats"
license = "Apache-2.0"
keywords = ["convert", "parquet", "json", "avro", "csv"]
edition = "2021"

[dependencies]
comfy-table = "6.1.2"
datafusion = { version = "13.0", features = ["avro"] }
structopt = "0.3"
tokio = "1.19"