[package]
name = "bdt"
version = "0.15.0"
homepage = "https://github.com/andygrove/bdt"
repository = "https://github.com/andygrove/bdt"
authors = ["Andy Grove <andygrove73@gmail.com>"]
description = "Utility for viewing, querying, converting, and comparing files in popular data formats (CSV, Parquet, JSON, Avro)"
license = "Apache-2.0"
keywords = ["convert", "parquet", "json", "avro", "csv"]
edition = "2021"

[[bin]]
name = "bdt"
path = "src/bin/main.rs"

[lib]
name = "bdt"
path = "src/lib.rs"

[dependencies]
comfy-table = "6.1.2"
datafusion = { version = "33.0", features = ["avro"] }
structopt = "0.3"
tokio = "1.19"
